--- a/Contact.html
+++ b/Contact.html
@@ -50,11 +50,19 @@ input[type=submit]:hover {
     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
     <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
-    </select>
+<select id="country" name="country">
+  <option value="india">India</option>
+  <option value="australia">Australia</option>
+  <option value="canada">Canada</option>
+  <option value="usa">USA</option>
+  <option value="france">France</option>
+  <option value="germany">Germany</option>
+  <option value="japan">Japan</option>
+  <option value="mexico">Mexico</option>
+  <option value="spain">Spain</option>
+  <!-- Add more options for other countries as needed -->
+</select>
+
 
     <label for="subject">Subject</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
