--- a/index.html
+++ b/index.html
@@ -120,13 +120,17 @@
                     </ul>
                 </ul>
             </div>
+
+
+
             <div class="box box3 animate__animated animate__slideInRight wow" data-wow-duration="1s" data-wow-delay="0.75s">
+                
                 <div>
                     <ul>
                         <!--Enter your profile links here-->
                         <li class=""><a href="https://github.com/MohdArham" target="_blank"><i class="fab fa-github iconn"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/mohd-arham-4ab292248" target="_blank"><i class="fab fa-linkedin-in  iconn"></i></a></li>
-                        <li><a href="mail:mohdarham94@gmail.com" target="_blank"><i class="fab fa-mail  iconn"></i></a></li>
+                        <li><a href="mail:mohdarham94@gmail.com" target="_blank"><i class="fab fa-google iconn"></i></a></li>
                         <li><a href="https://www.instagram.com/ar.ham_5/?igshid=ZDc4ODBmNjlmNQ%3D%3D" target="_blank"><i class="fab fa-instagram  iconn"></i></a></li>
                     </ul>
                 </div>
@@ -134,6 +138,8 @@
             </div>
 
 
+
+            
         </div>
 
         <!--TypedJs -->
