--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <!--Landing div-->
     <div class="landing">
         <!--Make sure that the image u add here is a square image and for best performance compress the image -->
-        <div class="img animate__animated animate__slideInDown wow" data-wow-duration="1.5s" data-wow-delay="0.3s"><img src="assets/img/me.jpg" alt="name photo"></div>
+        <div class="img animate__animated animate__slideInDown wow" data-wow-duration="1.5s" data-wow-delay="0.3s"><img src="assets/img/arham.png" alt="name photo" width="2768" height="2768"></div>
         <div class="me animate__animated animate__slideInUp wow" data-wow-duration="1.5s" data-wow-delay="0.3s">
             <!--Enter your name here-->
             <section class="shortme">
-                <h2>Mohammad Arham</h2>
+                <h2>MOHAMMAD ARHAM</h2>
             </section>
             <h3 id="typed"></h3>
         </div>
@@ -45,7 +45,9 @@
         <div class="card-wrapper">
             <div class="box box1 animate__animated animate__slideInLeft wow" data-wow-duration="1s" data-wow-delay="0s"><span> <b>About Me</b></span>
                 <!--Add a SQUARE IMAGE OF YOURS FOR BEST APPEARENCE (1:1)-->
-                <img src="assets/img/aboutme.jpg" alt="">
+                <img src="assets/img/arham.png" alt="" width="2768" height="2768">
+
+
                 <p>Hey I am Mohammad Arham from Delhi, India.<br>I am currently pursuing my B.Tech in Computer Science. <br> I love to design websites and <b style="color: #f53f2b;">UI/UX</b></p>
 
 
