--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Write your name below -->
     <meta name="author" content="Mohammad Arham">
     <!--Add a square image of yours -->
-    <link rel="shortcut icon" href="assets/img/aboutme.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/arham.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- This is the main compiled scss file-->
     <link rel="stylesheet" href="assets/css/main.css">
