--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
 
-                <div class="resume"><button type="submit"  onclick=" window.open('http:\/\/resume.adithyapai.com', '_blank')">Resume</button></div>
+                <div class="resume"><button type="submit"  onclick=" window.open('ArhamResume/ArhamResume.pdf', '_blank')">Resume</button></div>
             </div>
 
 
@@ -63,45 +63,100 @@
 
             
             <div class="box box2 animate__animated animate__slideInUp wow" data-wow-duration="1s" data-wow-delay="0.37s"> <span><b>Skills</b></span>
-                <br> <span> Programming</span>
-                <ul class="mainlist">
-                    <!--U can use Fontawsome icons here-->
-                    <ul class="sublist">
-                        <li class="icon"><i class="devicon-c-plain-wordmark"></i></li>
-                        <li>C</li>
-                    </ul>
-                    <ul class="sublist">
-                        <li class="icon"><i class="devicon-cplusplus-plain-wordmark"></i></li>
-                        <li>C++</li>
-                    </ul>
-                    <ul class="sublist">
-                        <li class="icon"><i class="devicon-python-plain-wordmark"></i></li>
-                        <li>Python</li>
-                    </ul>
-                    <ul class="sublist">
-                        <li class="icon"><i class="devicon-java-plain-wordmark"></i></li>
-                        <li>Java</li>
-                    </ul>
-                </ul><span style="width: 100%; text-align: center;">Design</span>
-                <ul class="mainlist">
-                    <!--USE ICONS FROM ICONS8 OF SIZE 48PX FOR BEST APPEARANCE -->
-                    <ul class="sublist">
-                        <li class="icon"><img src="https://img.icons8.com/windows/48/000000/adobe-illustrator.png" alt="illustrator" /></li>
-                        <li>Illustrator</li>
-                    </ul>
-                    <ul class="sublist">
-                        <li class="icon"><img src="https://img.icons8.com/windows/48/000000/adobe-photoshop.png" alt="Photoshop" /></li>
-                        <li>Photoshop</li>
-                    </ul>
-                    <ul class="sublist">
-                        <li class="icon"><img src="https://img.icons8.com/windows/48/000000/adobe-xd.png" alt="adobe xd" /></li>
-                        <li>XD</li>
-                    </ul>
-                    <ul class="sublist">
-                        <li class="icon"><img src="https://img.icons8.com/windows/48/000000/figma.png" alt="figma" /></li>
-                        <li>Figma</li>
-                    </ul>
-                </ul>
+<br>
+<span> Programming</span>
+<ul class="mainlist">
+  <!--U can use Fontawsome icons here-->
+  <li class="sublist">
+    <div class="icon colorful-icon">
+      <i class="devicon-c-plain-wordmark"></i>
+    </div>
+    <div>C</div>
+  </li>
+  <li class="sublist">
+    <div class="icon colorful-icon">
+      <i class="devicon-cplusplus-plain-wordmark"></i>
+    </div>
+    <div>C++</div>
+  </li>
+  <li class="sublist">
+    <div class="icon colorful-icon">
+      <i class="devicon-python-plain-wordmark"></i>
+    </div>
+    <div>Python</div>
+  </li>
+  <li class="sublist">
+    <div class="icon colorful-icon">
+      <i class="devicon-java-plain-wordmark"></i>
+    </div>
+    <div>Java</div>
+  </li>
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+  
+<!-- <span style="width: 100%; text-align: center;">Web Technologies</span>
+<ul class="mainlist"> -->
+  <!--USE ICONS FROM ICONS8 OF SIZE 48PX FOR BEST APPEARANCE -->
+  <!-- <li class="sublist">
+    <div class="icon">
+      <img src="https://img.icons8.com/color/48/000000/html-5.png" alt="HTML" />
+    </div>
+    <div>HTML</div>
+  </li>
+  <li class="sublist">
+    <div class="icon">
+      <img src="https://img.icons8.com/color/48/000000/css3.png" alt="CSS" />
+    </div>
+    <div>CSS</div>
+  </li>
+  <li class="sublist">
+    <div class="icon">
+      <img src="https://img.icons8.com/color/48/000000/javascript.png" alt="JavaScript" />
+    </div>
+    <div>JavaScript</div>
+  </li>
+</ul> -->
+</ul>
+<span style="width: 100%; text-align: center;">Web Technologies</span>
+<ul class="mainlist">
+  <!--USE ICONS FROM ICONS8 OF SIZE 48PX FOR BEST APPEARANCE -->
+  <li class="sublist">
+    <div class="icon">
+      <img src="https://img.icons8.com/color/48/000000/html-5.png" alt="HTML" />
+    </div>
+    <div>HTML</div>
+  </li>
+  <li class="sublist">
+    <div class="icon">
+      <img src="https://img.icons8.com/color/48/000000/css3.png" alt="CSS" />
+    </div>
+    <div>CSS</div>
+  </li>
+  <li class="sublist">
+    <div class="icon">
+      <img src="https://img.icons8.com/color/48/000000/javascript.png" alt="JavaScript" />
+    </div>
+    <div>JavaScript</div>
+  </li>
+</ul>
+
+
+
+
+
+
+
+
                 <span>Tools</span>
                 <ul class="mainlist">
                     <ul class="sublist">
@@ -116,10 +171,7 @@
                         <li class="icon"><img src="https://img.icons8.com/carbon-copy/32/000000/visual-studio-code-2019.png" alt="vscode" /></li>
                         <li>VS Code</li>
                     </ul>
-                    <ul class="sublist">
-                        <li class="icon"><img src="https://img.icons8.com/windows/32/000000/gitlab.png" alt="gitlab"></li>
-                        <li>Gitlab</li>
-                    </ul>
+                
                 </ul>
             </div>
 
