--- a/Contact.html
+++ b/Contact.html
@@ -3,38 +3,56 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f2f2f2;
+}
+
+* {
+  box-sizing: border-box;
+}
 
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
+  border: none;
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2),
+              -4px -4px 8px rgba(255, 255, 255, 0.5);
   margin-top: 6px;
   margin-bottom: 16px;
   resize: vertical;
 }
 
 input[type=submit] {
-  background-color: #04AA6D;
+  background-color: #f53f2b;
   color: white;
   padding: 12px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 10px;
   cursor: pointer;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2),
+              -4px -4px 8px rgba(255, 255, 255, 0.5);
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: #d92a14;
 }
 
 .container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
+  border-radius: 30px;
+  background-color: #f53f2b57;
   padding: 20px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1),
+              -10px -10px 20px rgba(255, 255, 255, 0.5);
 }
+
+h3 {
+  color: #f53f2b;
+  text-align: center;
+}
+
 </style>
 </head>
 <body>
@@ -50,19 +68,18 @@ input[type=submit]:hover {
     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
     <label for="country">Country</label>
-<select id="country" name="country">
-  <option value="india">India</option>
-  <option value="australia">Australia</option>
-  <option value="canada">Canada</option>
-  <option value="usa">USA</option>
-  <option value="france">France</option>
-  <option value="germany">Germany</option>
-  <option value="japan">Japan</option>
-  <option value="mexico">Mexico</option>
-  <option value="spain">Spain</option>
-  <!-- Add more options for other countries as needed -->
-</select>
-
+    <select id="country" name="country">
+      <option value="india">India</option>
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+      <option value="france">France</option>
+      <option value="germany">Germany</option>
+      <option value="japan">Japan</option>
+      <option value="mexico">Mexico</option>
+      <option value="spain">Spain</option>
+      <!-- Add more options for other countries as needed -->
+    </select>
 
     <label for="subject">Subject</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
