--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <div class="footer">Made with ❤️ by <a href="https://github.com/MohdArham">Mohammad Arham</a></div>
               
 
-<!-- Contact Button code and inline css -->
+<!-- Contact Button code and inline -->
                 <li class="ContactColour"><a href="contact.html">Contact</a></li>
                 <style>
                 
