--- a/Contact.html
+++ b/Contact.html
@@ -87,6 +87,7 @@ h3 {
     <input type="submit" value="Submit">
   </form>
 </div>
+<script src="/assets/js/ContactForm.js"></script>
 
 </body>
 </html>
