Added Resume Link

--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
 
 
 
-
-                <div class="resume"><button type="submit"  onclick=" window.open('ArhamResume/ArhamResume.pdf', '_blank')">Resume</button></div>
-            </div>
+<!-- This is used to view pdf file resume -->
+                <!-- <div class="resume"><button type="submit"  onclick=" window.open('ArhamResume/ArhamResume.pdf', '_blank')">Resume</button></div>
+            </div> -->
+<!-- This is used to view host file -->
+            <div class="resume"><button type="submit"  onclick=" window.open('https:\/\/mohdarham.github.io/Arham-Resume/', '_blank')">Resume</button></div>
+          </div>
 
 
 
