--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <script src="https://kit.fontawesome.com/4019246ab4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <title>Mohammad Arham | Web Designer</title>
+    <title>Mohammad Arham</title>
     <style>
         .projects {
             padding: 20px;
@@ -176,10 +176,11 @@
             display: inline;
             margin: 0 10px;
         }
+        
         .footer {
             padding: 20px;
             text-align: center;
-            background-color: #f53f2b;
+            background-color: #4CAF50;
             color: #fff;
         }
         .ContactColour a {
@@ -211,15 +212,15 @@
         <div class="title">PORTFOLIO</div>
         <div class="card-wrapper">
             <div class="box box1 animate__animated animate__slideInLeft wow" data-wow-duration="1s" data-wow-delay="0s">
-                <span> <b>About Me</b></span>
-                <img src="assets/img/arham.png" alt="About Me">
-                <p>Hey I am Mohammad Arham from Delhi, India.<br>I am currently pursuing my B.Tech in Computer Science. <br></p>
+                <span> <b>ABOUT ME</b></span>
+                <!-- <img src="assets/img/arham.png" alt="About Me"> -->
+                <p>I'm a Software Developer with experience in backend development and ERP systems. I specialize in Python, Flask, and PostgreSQL. At Binary Semantics, I have worked on real-time API integrations, automated database dump processes, and optimized storage-leading to a 60% reduction in database size. I’m passionate about solving complex problems, building scalable systems, and continuously improving application performance and user experience. <br></p>
                 <!-- This is used to view host file -->
                 <div class="resume"><button type="submit" onclick="window.open('https://mohdarham.github.io/Arham-Resume/', '_blank')">Resume</button></div>
             </div>
             <div class="box box2 animate__animated animate__slideInUp wow" data-wow-duration="1s" data-wow-delay="0.37s"> 
                 <br>
-                <span> Programming</span>
+                <span> PROGRAMMING</span>
                 <ul class="mainlist">
                     <li class="sublist">
                         <div class="icon colorful-icon">
@@ -246,7 +247,7 @@
                         <div>Java</div>
                     </li>
                 </ul>
-                <span style="width: 100%; text-align: center;">Web Technologies</span>
+                <span style="width: 100%; text-align: center;">WEB TECHNOLOGIES</span>
                 <ul class="mainlist">
                     <li class="sublist">
                         <div class="icon">
@@ -267,7 +268,7 @@
                         <div>JavaScript</div>
                     </li>
                 </ul>
-                <span>Tools</span>
+                <span>TOOLS</span>
                 <ul class="mainlist">
                     <ul class="sublist">
                         <li class="icon"><img src="https://img.icons8.com/windows/32/000000/git.png" alt="git" /></li>
@@ -288,7 +289,7 @@
 
     <!-- Projects Section -->
     <div class="projects">
-        <h1 style="font-size: 36px; color: #f53f2b; text-align: center; margin-bottom: 20px;">My Projects</h1>
+        <h1 style="font-size: 36px; color: #000000; text-align: center; margin-bottom: 20px;">PROJECTS</h1>
 
         <!-- Project 1 -->
         <div class="project-card">
@@ -320,18 +321,66 @@
 
         <!-- Project 5 -->
         <div class="project-card">
-            <h2 class="project-title">Portfolio Website</h2>
-            <p class="project-description">Designed and developed a responsive portfolio website with rich animations, full-screen mode, and a modern aesthetic UI.</p>
+            <h2 class="project-title">Portfolio & E-commerce Website</h2>
+            <p class="project-description">Designed and developed a responsive portfolio website featuring rich animations, full-screen mode, and a modern aesthetic UI. Also built a fully functional e-commerce platform enabling product browsing, cart management, and checkout functionality.</p>
             <!-- <img src="assets/img/portfolio-website.jpg" alt="Portfolio Website" class="project-image"> -->
         </div>
 
         <!-- Project 6 -->
-        <div class="project-card">
+        <!-- <div class="project-card">
             <h2 class="project-title">E-commerce Website</h2>
             <p class="project-description">Built an e-commerce website allowing users to browse products, add items to the cart, and complete the purchase process.</p>
             <!-- <img src="assets/img/ecommerce-website.jpg" alt="E-commerce Website" class="project-image"> -->
         </div>
     </div>
+
+
+  <!-- Certifications Section -->
+  <div class="certifications">
+    <h1 style="font-size: 36px; color: #000000; text-align: center; margin-bottom: 20px;">CERTIFICATIONS</h1>
+
+    <!-- certifications 1 -->
+    <div class="project-card">
+        <h2 class="project-title">Introduction to Database Systems – NPTEL</h2>
+        <p class="project-description">Completed a foundational course on relational databases, including SQL, ER modeling, normalization, and indexing. Gained practical knowledge in designing and querying databases effectively.</p>
+        <!-- <img src="assets/img/quadtree-visualizer.jpg" alt="Quadtree Visualizer" class="project-image"> -->
+    </div>
+
+    <!-- certifications 2 -->
+    <div class="project-card">
+        <h2 class="project-title">Intellectual Property – NPTEL</h2>
+        <p class="project-description">Learned the fundamentals of intellectual property rights, including patents, copyrights, trademarks, and their application in technology and innovation fields.</p>
+        <!-- <img src="assets/img/chatbot-system.jpg" alt="Student Information Chatbot System" class="project-image"> -->
+    </div>
+
+    <!-- certifications 3 -->
+    <div class="project-card">
+        <h2 class="project-title">C / C++ / Java Training / Introduction to Computers Training – IIT Bombay Spoken Tutorial</h2>
+        <p class="project-description">Acquired hands-on training in C, C++, Java, and computer fundamentals through interactive tutorials. Built a strong base in programming logic, syntax, and object-oriented concepts.</p>
+        <!-- <img src="assets/img/helpdesk-system.jpg" alt="Student Helpdesk System" class="project-image"> -->
+    </div>
+
+    <!-- Project 4 -->
+    <div class="project-card">
+        <h2 class="project-title">Fundamentals of Digital Marketing – Google</h2>
+        <p class="project-description">Covered core concepts of digital marketing, including SEO, SEM, social media strategy, content marketing, and analytics. Developed practical skills to apply in online brand building and user engagement.</p>
+        <!-- <img src="assets/img/number-plate-recognition.jpg" alt="Number Plate Recognition System" class="project-image"> -->
+    </div>
+
+    <!-- Project 5 -->
+    <div class="project-card">
+        <h2 class="project-title">Virtual Labs Webinar – IIT Delhi</h2>
+        <p class="project-description">Participated in a national-level webinar focusing on Virtual Labs. Gained insights into remote experimentation and e-learning platforms used in engineering and science education.</p>
+        <!-- <img src="assets/img/portfolio-website.jpg" alt="Portfolio Website" class="project-image"> -->
+    </div>
+
+    <!-- Project 6 -->
+    <!-- <div class="project-card">
+        <h2 class="project-title">E-commerce Website</h2>
+        <p class="project-description">Built an e-commerce website allowing users to browse products, add items to the cart, and complete the purchase process.</p>
+        <!-- <img src="assets/img/ecommerce-website.jpg" alt="E-commerce Website" class="project-image"> -->
+    </div>
+</div>
 
     <div class="container">
         <div class="social-links">
@@ -342,16 +391,16 @@
                 <li><a href="https://www.instagram.com/ar.ham_5/?igshid=ZDc4ODBmNjlmNQ%3D%3D" target="_blank"><i class="fab fa-instagram iconn"></i></a></li>
             </ul>
         </div>
-        <div class="footer">Made with ❤️ by <a href="https://github.com/MohdArham">Mohammad Arham</a></div>
+        <div class="footer">Made by  <a href="https://github.com/MohdArham">Mohammad Arham</a></div>
         <!-- Contact Button code and inline -->
         <li class="ContactColour"><a href="contact.html">Contact</a></li>
         <style>
             .ContactColour a {
-                color: #f53f2b;
+                color: #4CAF50;
                 text-decoration: none;
             }
             .ContactColour a:hover {
-                color: #f53f2b;
+                color: #0c0c0c;
             }
         </style>
     </div> 
@@ -367,10 +416,19 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script>
         var typed = new Typed("#typed", {
-            strings: ['Programmer', 'Engineer', 'Gamer ', 'Designer'],
-            typeSpeed: 50,
+            // strings: ['Software Developer', 'Engineer', 'Gamer ', 'Designer'],
+            strings: [
+        'Software Developer',
+        'Python Developer',
+        'Flask Developer',
+        'Backend Engineer',
+        'API Developer',
+        'AWS Practitioner',
+        'PostgreSQL Expert'
+    ],
+            typeSpeed: 30,
             smartBackspace: true,
-            backSpeed: 35,
+            backSpeed: 20,
             loop: true,
             showCursor: false,
         });
