--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#f53f2b">
@@ -23,6 +24,7 @@
             margin: 20px auto;
             max-width: 1200px;
         }
+
         .project-card {
             padding: 15px;
             border: 1px solid #ddd;
@@ -31,25 +33,30 @@
             margin-bottom: 20px;
             position: relative;
         }
+
         .project-card img {
             width: 100%;
             height: auto;
             border-radius: 8px;
         }
+
         .project-image {
             width: 100%;
             border: 1px solid #ddd;
             border-radius: 8px;
             margin-top: 10px;
         }
+
         .project-title {
             font-size: 28px;
             color: #333;
         }
+
         .project-description {
             font-size: 16px;
             color: #666;
         }
+
         footer {
             padding: 20px;
             text-align: center;
@@ -58,6 +65,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="projects">
         <h1 style="font-size: 36px; color: #f53f2b; text-align: center; margin-bottom: 20px;">My Projects</h1>
@@ -65,42 +73,51 @@
         <!-- Project 1 -->
         <div class="project-card">
             <h2 class="project-title">Quadtree Visualizer</h2>
-            <p class="project-description">Developed a versatile quadtree library for efficient data visualization. Features include interactive visualization and collision detection, using C/C++, CMake, and React. Applications include GIS, game development, and data analysis.</p>
+            <p class="project-description">Developed a versatile quadtree library for efficient data visualization.
+                Features include interactive visualization and collision detection, using C/C++, CMake, and React.
+                Applications include GIS, game development, and data analysis.</p>
             <img src="assets/img/quadtree-visualizer.jpg" alt="Quadtree Visualizer" class="project-image">
         </div>
 
         <!-- Project 2 -->
         <div class="project-card">
             <h2 class="project-title">Student Information Chatbot System</h2>
-            <p class="project-description">Created a chatbot for answering student and college-related queries, improving response times and reducing administrative workload. Utilized AI, natural language processing, and web technologies for implementation.</p>
+            <p class="project-description">Created a chatbot for answering student and college-related queries,
+                improving response times and reducing administrative workload. Utilized AI, natural language processing,
+                and web technologies for implementation.</p>
             <img src="assets/img/chatbot-system.jpg" alt="Student Information Chatbot System" class="project-image">
         </div>
 
         <!-- Project 3 -->
         <div class="project-card">
             <h2 class="project-title">Student Helpdesk System (Web-Based)</h2>
-            <p class="project-description">Developed a system enabling students to request academic, technical, and administrative support from their educational institution.</p>
+            <p class="project-description">Developed a system enabling students to request academic, technical, and
+                administrative support from their educational institution.</p>
             <img src="assets/img/helpdesk-system.jpg" alt="Student Helpdesk System" class="project-image">
         </div>
 
         <!-- Project 4 -->
         <div class="project-card">
             <h2 class="project-title">Number Plate Recognition System using MATLAB</h2>
-            <p class="project-description">Created a system utilizing image processing techniques and pattern recognition algorithms to detect and extract license plate information from images.</p>
-            <img src="assets/img/number-plate-recognition.jpg" alt="Number Plate Recognition System" class="project-image">
+            <p class="project-description">Created a system utilizing image processing techniques and pattern
+                recognition algorithms to detect and extract license plate information from images.</p>
+            <img src="assets/img/number-plate-recognition.jpg" alt="Number Plate Recognition System"
+                class="project-image">
         </div>
 
         <!-- Project 5 -->
         <div class="project-card">
             <h2 class="project-title">Portfolio Website</h2>
-            <p class="project-description">Designed and developed a responsive portfolio website with rich animations, full-screen mode, and a modern aesthetic UI.</p>
+            <p class="project-description">Designed and developed a responsive portfolio website with rich animations,
+                full-screen mode, and a modern aesthetic UI.</p>
             <img src="assets/img/portfolio-website.jpg" alt="Portfolio Website" class="project-image">
         </div>
 
         <!-- Project 6 -->
         <div class="project-card">
             <h2 class="project-title">E-commerce Website</h2>
-            <p class="project-description">Built an e-commerce website allowing users to browse products, add items to the cart, and complete the purchase process.</p>
+            <p class="project-description">Built an e-commerce website allowing users to browse products, add items to
+                the cart, and complete the purchase process.</p>
             <img src="assets/img/ecommerce-website.jpg" alt="E-commerce Website" class="project-image">
         </div>
     </div>
@@ -131,4 +148,5 @@
         new WOW().init();
     </script>
 </body>
+
 </html>
