--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ I focus on writing clean, maintainable code and solving practical business probl
                     <button type="button" onclick="window.open('mailto:mohdarham94@gmail.com', '_blank')">
                         Email
                     </button>
+                    <button type="button" onclick="window.open('Contact.html', '_self')">
+        Contact Me
+    </button>
                     <button type="button"
                         onclick="window.open('https://www.instagram.com/ar.ham_5/?igshid=ZDc4ODBmNjlmNQ%3D%3D', '_blank')">
                         Instagram
@@ -351,6 +354,29 @@ I focus on writing clean, maintainable code and solving practical business probl
         <p class="project-description">Built an e-commerce website allowing users to browse products, add items to the cart, and complete the purchase process.</p>
         <!-- <img src="assets/img/ecommerce-website.jpg" alt="E-commerce Website" class="project-image"> -->
     </div>
+
+
+
+    <div class="education projects">
+    <h1 style="font-size: 36px; color: #000000; text-align: center; margin-bottom: 20px;">EDUCATION</h1>
+
+    <div class="project-card">
+        <h2 class="project-title">Bachelor of Technology (B.Tech) in Computer Science</h2>
+        <p class="project-description">
+            <strong>Jamia Hamdard University, New Delhi</strong><br>
+            2020 – 2024<br>
+            CGPA: 8.26
+        </p>
+    </div>
+
+    <div class="project-card">
+        <h2 class="project-title">St. Mary's Senior Secondary School</h2>
+        <p class="project-description">
+            Intermediate (PCM) - 2020<br>
+            High School - 2018
+        </p>
+    </div>
+</div>
     </div>
 
  <footer class="footer">
