--- a/Contact.html
+++ b/Contact.html
@@ -119,6 +119,46 @@
         transform: translate(-50%, -40%);
       }
     }
+
+    #loading-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 99999;
+    }
+
+    .loader {
+      width: 45px;
+      height: 45px;
+      border: 5px solid #fff;
+      border-top: 5px solid #f53f2b;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    #loading-overlay p {
+      color: white;
+      margin-top: 12px;
+      font-size: 18px;
+      font-weight: bold;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
   </style>
 </head>
 
@@ -146,6 +186,11 @@
   <div id="success-popup">Submitted Successfully!</div>
 
   <script src="assets/js/contact.js"></script>
+
+  <div id="loading-overlay">
+    <div class="loader"></div>
+    <p>Submitting...</p>
+  </div>
 </body>
 
 </html>
