added whatsapp button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 </head>
 
 <body>
+
+    <!-- Floating WhatsApp Button -->
+    <a href="https://wa.me/919557385029?text=Hi%20Arham,%20I%20visited%20your%20portfolio%20website."
+    class="whatsapp-float"
+    target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" class="whatsapp-icon">
+    </a>
+
     <!--Landing div-->
     <div class="landing">
         <div class="img animate__animated animate__slideInDown wow" data-wow-duration="1.5s" data-wow-delay="0.3s"><img
